<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edsurname"
        android:layout_alignStart="@+id/surname"
        android:layout_marginBottom="-108dp"
        android:text="@string/name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edname"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentEnd="true"
        android:inputType="" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/marks"
        android:layout_marginTop="123dp"
        android:text="@string/surname"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/add"
        android:layout_marginTop="178dp"
        android:text="@string/marks"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_centerVertical="true"
        android:text="@string/id"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edsurname"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="108dp"
        android:inputType="" />

    <EditText
        android:id="@+id/edmarks"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/marks"
        android:layout_alignParentEnd="true"
        android:inputType="" />

    <EditText
        android:id="@+id/edid"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/id"
        android:inputType="" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/update"
        android:layout_marginBottom="105dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/add"
        android:layout_marginEnd="95dp"
        android:text="@string/view" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="16dp"
        android:text="@string/update" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/update"
        android:text="@string/delete" />

</RelativeLayout>